--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -146,6 +146,7 @@
   </head>
   <body>
     <div class="hello">
+      <p>Jestem tu</p>
       <img class="hello__logo" src="../assets/img/logo.svg" alt="WTF " />
       <span class="hello__circles"></span>
     </div>
