--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -32,7 +32,7 @@
       </div>
 <form class="form" method="post" action="https://dev.cotenfrontend.pl">
       <article class="article article__1">
-        <h3>Ogólna ocena satysfakcji</h3>
+        <h3 class="article__heading">Ogólna ocena satysfakcji</h3>
         <p>
           Jak bardzo prawdopodobne jest, że polecisz nas jako pracodawcę swojemu
           znajomemu?
@@ -140,7 +140,7 @@
         </div>
       </article>
         <article class="article article__2">
-          <h3>Oceń swoje doświadczenia z pracy w maka<i>Design</i></h3>
+          <h3 class="article__heading">Oceń swoje doświadczenia w maka<i>Design</i></h3>
 
          <p></p> <label>Miałam/em szansę w pełni wykorzystać swoje możliwości:</label>
           <input class="article__option" type="range" min="0" max="5" value="1" step="1" name="question1">
@@ -168,7 +168,7 @@
  
 
       <article class="article article__3">
-        <h3>Przyczyny odejścia</h3>
+        <h3 class="article__heading">Przyczyny odejścia</h3>
         <p>
           <label
             ><input name="reason" value="1" type="checkbox" /> Niski poziom
@@ -230,7 +230,7 @@
 
       
       <article class="article article__4">
-        <h3>Informacje dodatkowe</h3>
+        <h3 class="article__heading">Informacje dodatkowe</h3>
         <p>
           <label>Czy jest coś jeszcze, czym chciałabyś/łbyś się z nami podzielić? Jesli tak -
           wskaż proszę poniżej.
@@ -243,7 +243,7 @@
       </article>
 
       <article class="article article__5">
-        <h3>Umów spotkanie z HR Business Partnerem</h3>
+        <h3 class="article__heading">Umów spotkanie z HR Business Partnerem</h3>
         <p>
           <label>Jeśli zechcesz opowiedzieć nam bardziej szczegółowo o Twoich doświadczeniach z pracy w maka<i>Design</i>, wskaż termin spotkania.
         </label>
@@ -261,7 +261,7 @@
       </article>
 
       <article class="article article__6">
-        <h3>Informacje o Tobie</h3>
+        <h3 class="article__heading">Informacje o Tobie</h3>
         <p>
           <label>Wybierz Biuro, w którym pracowałaś/eś:</label>
           <select name="department" class="article__option">
