Reset button added

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -142,7 +142,7 @@
         <article class="article article__2">
           <h3 class="article__heading">Oceń swoje doświadczenia w maka<i>Design</i></h3>
 
-         <p></p> <label>Miałam/em szansę w pełni wykorzystać swoje możliwości:</label>
+         <p><label>Miałam/em szansę w pełni wykorzystać swoje możliwości:</label>
           <input class="article__option" type="range" min="0" max="5" value="1" step="1" name="question1">
         </p>
         <p>
@@ -300,8 +300,12 @@
         </p>
       </article>
 
-      <div class="sender">
-        <input type="submit" class="sender__button" value="Wyślij">
+      <div>
+        <p class="reset"><input type="reset" name="reset" class="reset__button" value="Wyczyść"></p>
+      </div>
+
+      <div>
+        <p class="sender"><input type="submit" name="sender" class="sender__button" value="Wyślij"></p>
       </div>
     </form>
     </main>
