--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -26,7 +26,7 @@
           wnioski przyczynią się do rozwoju naszego środowiska pracy.
           Proponujemy Ci następująca kolejność zdarzeń:</p>
         </div>
-        <ol>
+        <ol class="heading__list">
           <li>Uzupełnienie ankiety.</li>
           <li>
             Spotkanie z HR Business Partnerem w celu pogłębienia Twoich opinii.
@@ -305,11 +305,8 @@
         </p>
       </article>
 
-      <div>
+      <div class="form__buttons">
         <p class="reset"><input type="reset" name="reset" class="reset__button" value="Wyczyść"></p>
-      </div>
-
-      <div>
         <p class="sender"><input type="submit" name="sender" class="sender__button" value="Wyślij"></p>
       </div>
     </form>
