--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exit interview</title>
-    <meta name="description" content="Your project description" />
-    <!-- Title -->
-    <meta property="Exit-interview - the survay od makaDesign" content="The survay for the opinion of an employee who ends cooperation with the company" />
-    <!-- OPTIONAL description. 2-4 sentences. -->
-    <meta property="Exit-interview:url" content="https://joannamakarewicz.github.io/exit-interview-webpack/" />
+    <meta property="og:title" content="Exit-interview: the survay of makaDesign"/>
+    <meta property="og:description" content="The survay for the opinion of an employee who ends cooperation with the company" />
+    <meta property="og:url" content="https://joannamakarewicz.github.io/exit-interview-webpack/" />
     <meta
-      property="Exit-interview:image"
+      property="og:image"
       content="https://joannamakarewicz.github.io/exit-interview-webpack/exit-interview.png"/>
 
     <link href="../scss/main.scss" rel="stylesheet" type="text/css" />
