Label's name changes

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -26,7 +26,7 @@
         <div class="heading__content">
           <h2>Dzień dobry,</h2>
           <p>zbliża się termin zakończenia przez Ciebie współpracy z firmą
-          <b>maka</b><i>Design</i>. Zapraszam Cię zatem do uzupełnienia poniższej ankiety.
+          <em>maka</em><i>Design</i>. Zapraszam Cię zatem do uzupełnienia poniższej ankiety.
           Zapewniam, że wnikliwie przeanalizujemy Twoje sugestie, a wyciągnięte
           wnioski przyczynią się do rozwoju naszego środowiska pracy.
           Proponujemy Ci następująca kolejność zdarzeń:</p>
@@ -50,101 +50,109 @@
         <div class="article__radio">
           <p class="special">
             <label
-              ><input
+              >0<input
                 class="special__button"
+                id="mainMark0"
                 name="mainMark"
                 type="radio"
                 value="mark0"
-              />0</label
+              /></label
             >
           </p>
           <p class="special">
             <label
-              ><input class="special__button" name="mainMark" type="radio" value="mark1" />
-              1</label
+              >1<input class="special__button" id="mainMark1" name="mainMark" type="radio" value="mark1" />
+              </label
             >
           </p>
           <p class="special">
             <label
-              ><input class="special__button" name="mainMark" type="radio" value="mark2" />
-              2</label
+              >2<input class="special__button" id="mainMark2" name="mainMark" type="radio" value="mark2" />
+              </label
             >
           </p>
           <p class="special">
             <label
-              ><input class="special__button" name="mainMark" type="radio" value="mark3" />
-              3</label
+              >3<input class="special__button" id="mainMark3" name="mainMark" type="radio" value="mark3" />
+              </label
             >
           </p>
           <p class="special">
             <label
-              ><input
+              >4<input
                 class="special__button"
+                id="mainMark4"
                 name="mainMark"
                 type="radio"
                 value="mark4"
-              />4</label
+              /></label
             >
           </p>
           <p class="special">
             <label
-              ><input
+              >5<input
                 class="special__button"
+                id="mainMark5"
                 name="mainMark"
                 type="radio"
                 value="mark5"
-              />5</label
+              /></label
             >
           </p>
           <p class="special">
             <label
-              ><input
+              >6<input
                 class="special__button"
+                id="mainMark6"
                 name="mainMark"
                 type="radio"
                 value="mark6"
-              />6</label
+              /></label
             >
           </p>
           <p class="special">
             <label
-              ><input
+              >7<input
                 class="special__button"
-                name="mainMark"
+                id="mainMark"
+                name="mainMark7"
                 type="radio"
                 value="mark7"
-              />7</label
+              /></label
             >
           </p>
           <p class="special">
             <label
-              ><input
+              >8<input
                 class="special__button"
+                id="mainMark8"
                 name="mainMark"
                 type="radio"
                 value="mark8"
-              />8</label
+              /></label
             >
           </p>
           <p class="special">
             <label
-              ><input
+              >9<input
                 class="special__button"
+                id="mainMark9"
                 name="mainMark"
                 type="radio"
                 value="mark9"
-              />9</label
+              /></label
             >
           </p>
           <p class="special">
             <label
-              ><input
+              >10<input
                 class="special__button"
+                id="mainMark10"
                 name="mainMark"
                 type="radio"
                 value="mark10"
                 checked
-              />10</label
+              /></label
             >
           </p>
         </div>
